--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -11,7 +11,7 @@
 <%= @page.text %>
 </div>
 
-</div>
+</div><!--end row--> 
 
 <br>
 
@@ -26,7 +26,8 @@
  <hr>
 
 <% end %>
-</div>
+</div><!--end row--> 
+
 
 <br>
 
@@ -43,9 +44,10 @@
  </p>
   
   <p>
-    <%= f.submit 'Оставить отзыв' %>
+    <%= f.submit 'Оставить отзыв', class: "btn btn-success" %>
   </p>
 <% end %>
-</div>
+</div><!--end row--> 
+
 
 
