dobavlena forma for picture neskolkih

--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -14,6 +14,7 @@
 
 <%= f.text_area :text, size: '60x10', placeholder: 'Описание' %><br><br>
 <%= f.file_field :image %><br><br>
+<%= f.file_field :imagetwo %><br><br>
+<%= f.file_field :imagethree %><br><br>
 <%= f.submit 'Загрузить' %>
-
 <% end %>
