--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,9 +12,11 @@
  *
  *= require_tree .
  *= require_self
- */
+ */ 
 
-    .thumb img {
+ /*Стили для вывода картинок на главной странице*/
+
+   .thumb img {
             -webkit-filter: grayscale(0);
             filter: none;
             border-radius: 1px;
@@ -34,19 +36,27 @@
     .thumb {
             padding: 5px;
         }
+/*-------------------------*/
 
-
-ul.pagination {
-    display: inline-block;
-    padding: 0;
-    margin: 0;
+.wrapper{
+  margin: 60px auto;
+  text-align: center;
+}
+h1{
+  margin-bottom: 1.25em;
+}
+#pagination-demo{
+  display: inline-block;
+  margin-bottom: 1.75em;
+}
+#pagination-demo li{
+  display: inline-block;
 }
 
-ul.pagination li {display: inline;}
-
-ul.pagination li a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
+.page-content{
+  background: #eee;
+  display: inline-block;
+  padding: 10px;
+  width: 100%;
+  max-width: 660px;
 }
