--- a/app/views/layouts/_css_to_layouts.html.erb
+++ b/app/views/layouts/_css_to_layouts.html.erb
@@ -6,7 +6,7 @@
  </div>
     
  <div class="col-md-2" style="background-color: Gainsboro; height:50px; line-height: 50px; font-size: 18px; font-family: Verdana">
- 	<%= link_to 'Админ!', new_page_path %> 
+ 	<%= link_to 'Админ', new_page_path %> 
  </div>
 
  <div class="col-md-2" style="background-color: Gainsboro; height:50px">
