dobavlena papka errors

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,6 @@
 <br>
-<!-- Вывод ошибок -->
-<%= render 'comments/errors' %>
+<!-- Вывод ошибок из формы для добавления комментариев -->
+<%= render 'errors/comments_errors' %>
 <!-------------------------------------------------------------->
 
 <div class="row" >
