--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for :page, url: pages_path, html: { multipart: true } do |f| %>
 
-<!-- Вывод ошибок -->
-<%= render 'pages/errors' %>
+<!-- Вывод ошибок из формы для добавления картинок-->
+<%= render 'errors/pages_errors' %>
 <!-------------------------------------------------------------->
 
 <%= f.text_area :text, size: '60x10', placeholder: 'Описание' %><br><br>
