dobavlen gem russian

--- a/app/assets/stylesheets/css_for_form_vxoda.css
+++ b/app/assets/stylesheets/css_for_form_vxoda.css
@@ -1,9 +1,5 @@
-/*
-  Place all the styles related to the matching controller here.
-  They will automatically be included in application.css.
-*/
 
-
+/* css для формы входа для администратора */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
 html, body {
