--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -10,5 +10,5 @@
 <%= f.file_field :image %><br><br>
 <%= f.file_field :imagetwo %><br><br>
 <%= f.file_field :imagethree %><br><br>
-<%= f.submit 'Загрузить' %>
+<%= f.submit 'Загрузить', class: 'button-4' %>
 <% end %>
