--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -16,7 +16,7 @@
  </p>
   
   <p>
-    <%= f.submit 'Добавить', class: "btn btn-success" %>
+    <%= f.submit 'Добавить', class: "button-4" %>
   </p>
 
 <% end %>
