--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,4 +37,7 @@
             padding: 5px;
         }
 /*-------------------------*/
-
+ body {
+        background-color: Linen
+ }
+ /*-------------------------*/
