--- a/app/assets/stylesheets/css_for_form_vxoda.css
+++ b/app/assets/stylesheets/css_for_form_vxoda.css
@@ -1,5 +1,5 @@
 
-/* css для формы входа для администратора */
+/* Cтили для формы входа для администратора */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
 html, body {
