--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,8 +11,9 @@
 </div> <!--end.row-->
 
 
-<div class="col-md" style="text-align: center;">
+<div class="col-md demo" style="text-align: center;">
 <%= paginate @page %>
 </div>
+
 
 
